# app/domains/users/user.router.js
@@ -1,8 +1,13 @@
 const express = require('express');
 const userRouter = express.Router();
 
+const verifyToken = require('../../middlewares/auth/jwt/jwt.verify');
+
 const authRouter = require('./auth/user.auth.routes');
+const userController = require('./user.controller');
 
 userRouter.use('/auth', authRouter);
+userRouter.get('/me', verifyToken, userController.read);
+userRouter.put('/me', verifyToken, userController.update);
 
 module.exports = userRouter;
